--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,20 @@
 --- #YAML:1.0
 name:               CSS-Flip
-version:            0.01
+version:            0.02
 abstract:           Flip direction of Cascading Style Sheet (CSS)
 author:
-    - Hatuka*nezmi - IKEDA Soji <hatuka@nezumi.nu>
+    - Hatuka*nezumi - IKEDA Soji <hatuka@nezumi.nu>
 license:            perl
 distribution_type:  module
 configure_requires:
-    ExtUtils::MakeMaker:  0
+    ExtUtils::MakeMaker:  6.46
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
-    Test::More:  0
+    Test::More:  0.45
+resources:
+    license:     http://dev.perl.org/licenses/
+    repository:  http://repos.nezumi.nu/repos/CSS-Flip/
 no_index:
     directory:
         - t
