--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,17 @@
 --- #YAML:1.0
 name:               CSS-Flip
-version:            0.03
+version:            0.04
 abstract:           Flip direction of Cascading Style Sheet (CSS)
 author:
     - Hatuka*nezumi - IKEDA Soji <hatuka@nezumi.nu>
 license:            perl
 distribution_type:  module
 configure_requires:
-    ExtUtils::MakeMaker:  6.46
+    ExtUtils::MakeMaker:  6.26
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
+    perl:        5.005
     Test::More:  0.45
 resources:
     license:     http://dev.perl.org/licenses/
