Import of NEZUMI/CSS-Flip-0.04_01 from CPAN.
gitpan-cpan-distribution: CSS-Flip
gitpan-cpan-version:      0.04_01
gitpan-cpan-path:         NEZUMI/CSS-Flip-0.04_01.tar.gz
gitpan-cpan-author:       NEZUMI
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               CSS-Flip
-version:            0.04
+version:            0.04_01
 abstract:           Flip direction of Cascading Style Sheet (CSS)
 author:
     - Hatuka*nezumi - IKEDA Soji <hatuka@nezumi.nu>
