--- a/META.yml
+++ b/META.yml
@@ -1,26 +1,28 @@
---- #YAML:1.0
-name:               CSS-Flip
-version:            0.04_01
-abstract:           Flip direction of Cascading Style Sheet (CSS)
+---
+abstract: 'Flip direction of Cascading Style Sheet (CSS)'
 author:
-    - Hatuka*nezumi - IKEDA Soji <hatuka@nezumi.nu>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  6.26
+  - 'Hatuka*nezumi - IKEDA Soji <hatuka@nezumi.nu>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    perl:        5.005
-    Test::More:  0.45
-resources:
-    license:     http://dev.perl.org/licenses/
-    repository:  http://repos.nezumi.nu/repos/CSS-Flip/
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.57_05
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.26
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.68, CPAN::Meta::Converter version 2.120630'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: CSS-Flip
+no_index:
+  directory:
+    - t
+    - inc
+    - lib/CSS/Yamaantaka
+requires:
+  Pod::Usage: 0
+  Test::More: 0.45
+  perl: 5.005
+resources:
+  license: http://dev.perl.org/licenses/
+  repository: https://github.com/hatukanezumi/CSS-Flip
+version: 0.04_03
